# AI-news-aggregator

./: .env.example  Dockerfile  README.md  cookies.txt  docker-compose.yml  main.py  pyproject.toml
src/ai_news_aggregator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/news_aggregator/: config.py  database.py  mailer.py  models.py  scheduler.py  scraper.py  summarizer.py
