[project]
name = "ai-news-aggregator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0.0",
    "feedparser>=6.0.0",
    "groq>=0.9.0",
    "jinja2>=3.1.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.0",
    "youtube-transcript-api>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"